--- a/src/main/Resources/css/main.css
+++ b/src/main/Resources/css/main.css
@@ -6,7 +6,7 @@
 }
 
 .text-field {
-    -fx-background-color: #d9ffe2;
+    -fx-background-color: linear-gradient(to bottom right, red, blue);
     -fx-font: 20px "Arial";
 }
 
@@ -16,7 +16,7 @@
 }
 
 .button:hover {
-    -fx-background-color:cyan;
+    -fx-background-color:red;
     -fx-font-size: 18px;
 }
 
